# Ground_Wire

./: .gitignore  README.md  embedding_live_check.db  final_check_full.db  final_check_full_verbose.db  full_pipeline_verify.db  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py  repository.py  sample_data.py
app/services/: clustering.py  collection.py  crawling.py  llm_analyzer.py  pipeline.py  preprocessing.py  rag.py  reference_ingestion.py  reference_registry.py  reliability.py  scheduler.py  slack_reporter.py  source_normalizer.py  summarizer.py  trust_first_rag.py  ui_localizer.py
app/services/retrieval/: __init__.py  hybrid_retriever.py  news_retriever.py  reference_retriever.py  vector_store.py
docs/: ARCHITECTURE.md  TRUST_FIRST_RAG_GUIDE.md
reference_docs/: sources.json
templates/: dashboard.html  dashboard_search_rank.html
tests/: test_api_responses.py  test_clustering.py  test_grounding.py  test_pipeline.py  test_preprocessing.py  test_reference_rag.py  test_reliability.py
