[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability-news-agent"
version = "0.1.0"
description = "Reliability-first issue analysis AI agent for news monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "jinja2>=3.1.0",
  "openai>=1.99.0",
  "pydantic>=2.7.0",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
packages = ["app", "app.services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
